[package]
name = "eew-renderer-url"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.56", features = ["derive"] }
dateparser = "0.2.1"
hmac = "0.12.1"
prost = "0.14.0"
sha1 = "0.10.6"
base65536 = "1.0.1"
base32768 = { git = "https://github.com/EEWBot/base32768-rs", commit = "67e7ddfd1a745f2aecdf2dd7cbd0a8f3f9f1b524" }
urlencoding = "2.1.3"
generic-array = "1.3.5"
chrono = "0.4.43"

[build-dependencies]
prost-build = "0.14.0"
